<resources>
    <string name="app_name">Pokemon Team Builder</string>
    <string name="pokemon_1">Pokemon 1</string>
    <string name="pokemon_2">Pokemon 2</string>
    <string name="pokemon_3">Pokemon 3</string>
    <string name="pokemon_4">Pokemon 4</string>
    <string name="pokemon_5">Pokemon 5</string>
    <string name="pokemon_6">Pokemon 6</string>
    <string name="choose">Choose</string>
    <string name="build_trainer_card">Build Trainer Card</string>
    <string name="ability">Ability:</string>
    <string name="hold_item">Hold Item:</string>
    <string name="moves">Moves:</string>
    <string name="move_1">Move 1</string>
    <string name="move_2">Move 2</string>
    <string name="choose_move">Choose</string>
    <string name="take_photo">Take Photo</string>
    <string name="name">Name:</string>
    <string name="card_style">Card Style:</string>
    <string name="generate">Generate</string>
    <string-array name="trainer_card_types">
        <item>Primal Groudon</item>
        <item>Primal Kyogre</item>
        <item>Xerneas</item>
        <item>Yveltal</item>
        <item>Chesnaught</item>
        <item>Delphox</item>
        <item>Greninja</item>
        <item>Lunala</item>
        <item>Solgaleo</item>
        <item>Team Instinct</item>
        <item>Team Mystic</item>
        <item>Team Valor</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="move_1_tag">Move 1</string>
    <string name="move_2_tag">Move 2</string>
    <string name="move_3">Move 3</string>
    <string name="move_4">Move 4</string>
    <string name="move_3_tag">Move 3</string>
    <string name="move_4_tag">Move 4</string>
    <string name="about">About</string>
    <string name="about_info">
        <![CDATA[Pokemon Team Builder\nWritten in Kotlin by Bryan Cuneo & Zack McKee\nCOMP 475 - Fall 2017]]></string>
    <string name="power">Power:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="settings">Settings</string>
    <string name="update_database">Update Database</string>
    <string name="start_over">Start Over</string>
    <string name="delete">Delete</string>
    <string name="add_a_pokemon">Add a Pokemon</string>
</resources>