<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.harding.pokemonteambuilder.PokemonSetupActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/abilityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ability"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <android.support.v7.widget.DropDownListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent">

    </android.support.v7.widget.DropDownListView>

    <TextView
        android:id="@+id/itemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hold_item"
        app:layout_constraintTop_toBottomOf="@+id/abilityTextView"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <android.support.v7.widget.DropDownListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent">

    </android.support.v7.widget.DropDownListView>

    <TextView
        android:id="@+id/movesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moves"
        app:layout_constraintTop_toBottomOf="@+id/itemTextView"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/move1">

        <TextView
            android:id="@+id/move1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_1"/>

        <Button
            android:id="@+id/move1Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="choosePokemon1"
            android:text="@string/choose_move"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/move2">

        <TextView
            android:id="@+id/move2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_2"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="choosePokemon2"
            android:text="@string/choose_move"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
